Feito o sistema de mensagens

--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
-        <title>Simple MOOC</title>
+         <title>Simple MOOC</title>
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     </head>
     <body>
         <div class="header">
-            <div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
+            <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
                 <a class="pure-menu-heading" href="{% url 'home' %}">SIMPLE MOOC</a>
                 <ul>
                     <li class="pure-menu-selected"><a href="{% url 'home' %}">Início</a></li>
@@ -27,6 +27,16 @@
             </div>
         </div>
         <div class="content">
+            <!-- Parte do Sistema de mensagens -->
+            {% if messages %}
+                <div class="pure-g-r content-ribbon">
+                    <aside class="pure-u-1">
+                        {% for message in messages %}
+                            <p>{{ message }}</p>
+                        {% endfor %}
+                    </aside>
+                </div>
+            {% endif %}  
             {% block content %}{%endblock%}
             <div class="footer">
                 Simple MOOC - Uma simples plataforma de ensino a distância
