--- a/clubinhonerd/clubinhonerd/accounts/templates/accounts/dashboard.html
+++ b/clubinhonerd/clubinhonerd/accounts/templates/accounts/dashboard.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+<!-- load 'nome_do_arquivo' -->
+{% load courses_tags %}
+
 {% block content %}
 
 	<div class="pure-g-r content-ribbon">  
@@ -11,22 +14,58 @@
 	            </ul>
 	        </div>
 	    <div class="pure-u-1-3">
-	        <div class="pure-menu pure-menu-open">
-	            <a class="pure-menu-heading">Meus Cursos</a>
+	        <div class="pure-menu pure-menu-open">	    
 	            <ul>
-	                <li><a href="#">Curso 1</a></li>
-	                <li><a href="#">Curso 2</a></li>
-	                <li class="pure-menu-heading">Minha Conta</li>
-	                <li><a href="{% url 'edit' %}">Editar Conta</a></li>
-	                <li><a href="{% url 'edit_password' %}">Editar Senha</a></li>
+                    <li class="pure-menu-heading">
+    					Bem-vindo, {{ user }}
+                    </li>
+	            	<!-- tag criada para fazer o render dos cursos do usuário -->
+	            	{% load_my_courses user as enrollments %}
+	            		<li class="pure-menu-heading">Cursos</li>
+						{% for enrollment in enrollments %}
+							<li>
+								<a href="#">
+									<i class="fa fa-book"></i>
+									{{ enrollment.course }}
+								</a>
+							</li> 
+							{% empty %} <!-- Se não tiver inscrito em nenhum curso -->	    
+								<li>Nenhum curso encontrado</li>
+						{% endfor %} 	
+	                <li class="pure-menu-heading">Configurações de Conta</li>
+	                <li>
+	                	<a href="{% url 'edit' %}">
+	                		<i class="fa fa-cog"></i>
+	                		Editar Informações
+	                	</a>
+	                </li>
+	                <li>
+	                	<a href="{% url 'edit_password' %}">
+	                		<i class="fa fa-lock"></i>
+	                		Editar Senha
+	                	</a>
+	                </li>
 	            </ul>
 	        </div>
 	    </div>
 	    <div class="pure-u-2-3">
 	    	<div class="inner">
 	    		{% block dashboard_content %}
-		    		<p><strong>Nome</strong>: {{ user }}</p>
-		    		<p><strong>E-mail</strong>: {{ user.email }} </p>
+		    		<h2>Meus Cursos</h2>
+		    		{% for enrollment in enrollments %}		    
+		                <div class="well">
+		                    <h3>{{ enrollment.course }} ({{ enrollment.course.start_date|date:'d/m/Y'|default:'Não informado' }})</h3>
+		                    {{ enrollment.course.description|linebreaks }}
+		                    <div class="pure-controls">
+		                        <a href="#" class="pure-button pure-button-primary">Acessar</a>
+		                        <a href="#" class="pure-button button-error">Cancelar</a>
+		                    </div>
+		                </div>
+		                {% empty %}
+			                <aside class="pure-u-1">
+			                    <p>Nenhum curso inscrito</p>
+			                </aside>
+		            {% endfor %}    
 	    		{% endblock %}
 	    	</div>
 	    </div>
