--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -5,8 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
-         <title>Simple MOOC</title>
+        <title>Simple MOOC</title>
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" />
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     </head>
     <body>
