--- a/clubinhonerd/clubinhonerd/accounts/templates/accounts/dashboard.html
+++ b/clubinhonerd/clubinhonerd/accounts/templates/accounts/dashboard.html
@@ -4,47 +4,41 @@
 {% load courses_tags %}
 
 {% block content %}
-
+	<!-- tag criada para fazer o render dos cursos do usuário -->
+	{% load_my_courses user as enrollments %}
 	<div class="pure-g-r content-ribbon">  
         <div class="pure-u-1">
-	            <ul class="breadcrumb">
-	            	{% block breadcrumb %}
-	                	<li><a href="{% url 'dashboard' %}">Meu Painel</a></li>
-	            	{% endblock %}
-	            </ul>
-	        </div>
+            <ul class="breadcrumb">
+            	{% block breadcrumb %}
+                	<li><a href="{% url 'dashboard' %}">Meu Painel</a></li>
+            	{% endblock %}
+            </ul>
+        </div>
 	    <div class="pure-u-1-3">
 	        <div class="pure-menu pure-menu-open">	    
 	            <ul>
                     <li class="pure-menu-heading">
     					Bem-vindo, {{ user }}
                     </li>
-	            	<!-- tag criada para fazer o render dos cursos do usuário -->
-	            	{% load_my_courses user as enrollments %}
-	            		<li class="pure-menu-heading">Cursos</li>
-						{% for enrollment in enrollments %}
-							<li>
-								<a href="#">
-									<i class="fa fa-book"></i>
-									{{ enrollment.course }}
-								</a>
-							</li> 
-							{% empty %} <!-- Se não tiver inscrito em nenhum curso -->	    
-								<li>Nenhum curso encontrado</li>
-						{% endfor %} 	
-	                <li class="pure-menu-heading">Configurações de Conta</li>
-	                <li>
-	                	<a href="{% url 'edit' %}">
-	                		<i class="fa fa-cog"></i>
-	                		Editar Informações
-	                	</a>
-	                </li>
-	                <li>
-	                	<a href="{% url 'edit_password' %}">
-	                		<i class="fa fa-lock"></i>
-	                		Editar Senha
-	                	</a>
-	                </li>
+                    {% block menu_options %}
+		            	<li class="pure-menu-heading">Cursos</li>
+							{% for enrollment in enrollments %}
+								<li>
+									<a href="{% url 'announcements' enrollment.course.slug %}"><i class="fa fa-book"></i>
+										{{ enrollment.course }}
+									</a>
+								</li> 
+								{% empty %} <!-- Se não tiver inscrito em nenhum curso -->	    
+									<li>Nenhum curso encontrado</li>
+							{% endfor %} 	
+		                <li class="pure-menu-heading">Configurações de Conta</li>
+		                <li>
+		                	<a href="{% url 'edit' %}"><i class="fa fa-cog"></i>Editar Informações</a>
+		                </li>
+		                <li>
+		                	<a href="{% url 'edit_password' %}"><i class="fa fa-lock"></i>Editar Senha</a>
+		                </li>
+	                {% endblock %}
 	            </ul>
 	        </div>
 	    </div>
@@ -57,7 +51,7 @@
 		                    <h3>{{ enrollment.course }} ({{ enrollment.course.start_date|date:'d/m/Y'|default:'Não informado' }})</h3>
 		                    {{ enrollment.course.description|linebreaks }}
 		                    <div class="pure-controls">
-		                        <a href="#" class="pure-button pure-button-primary">Acessar</a>
+		                        <a href="{% url 'announcements' enrollment.course.slug %}" class="pure-button pure-button-primary">Acessar</a>
 		                        <a href="#" class="pure-button button-error">Cancelar</a>
 		                    </div>
 		                </div>
