--- a/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
@@ -1,43 +1,6 @@
-{% extends "accounts/dashboard.html" %}
+{% extends "courses/course_dashboard.html" %}
 
-{% block menu_options %}
-
-	<div class="pure-menu-heading">
-	    <li class="pure-menu-heading">
-	        {{ course }}
-	    </li>
-	    <li>
-	        <a href="#">
-	        	<!-- fa=nome da classe, depois 'fa-nomedoícone' -->
-	            <i class="fa fa-video-camera"></i>
-	            Aulas e Materiais
-	        </a>
-	    </li>
-	    <li>
-	        <a href="#">
-	            <i class="fa fa-info-circle"></i>
-	            Informações
-	        </a>
-	    </li>
-	    <li>
-	        <a href="#">
-	            <i class="fa fa-envelope"></i>
-	            Anúncios
-	        </a>
-	    </li>
-	    <li>
-	        <a href="#">
-	            <i class="fa fa-comments"></i>
-	            Fórum de Dúvidas
-	        </a>
-	    </li>
-	    <!-- Para mostrar também as outras opções do dashboard (conteúdo base)-->
-	    {{ block.super }}
-	</div>
-
-{% endblock %}
-
-
+<!-- bloco do 'dashboard_content' e não de course_dashboard=herança de herança-->
 {% block dashboard_content %}
 
 	<div class="well">
