--- a/clubinhonerd/clubinhonerd/courses/templates/courses/course_dashboard.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/course_dashboard.html
@@ -16,7 +16,7 @@
         {{ course }}
     </li>
     <li>
-        <a href="#">
+        <a href="{% url 'lessons' course.slug %}">
         	<!-- fa=nome da classe, depois 'fa-nomedoícone' -->
             <i class="fa fa-video-camera"></i>
             Aulas e Materiais
@@ -29,7 +29,7 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="{% url 'announcements' course.slug %}">
             <i class="fa fa-envelope"></i>
             Anúncios
         </a>
