--- a/clubinhonerd/clubinhonerd/accounts/templates/accounts/edit.html
+++ b/clubinhonerd/clubinhonerd/accounts/templates/accounts/edit.html
@@ -5,7 +5,7 @@
 
 	{{ block.super }} <!-- para usar o que ele ja tinha  -->
 		<li>/</li>
-		<li><a href="{% url 'edit' %}">Editar Conta</a></li>
+		<li><a href="{% url 'accounts:edit' %}">Editar Conta</a></li>
 		
 {% endblock %}
 
