--- a/clubinhonerd/clubinhonerd/accounts/templates/accounts/edit_password.html
+++ b/clubinhonerd/clubinhonerd/accounts/templates/accounts/edit_password.html
@@ -4,7 +4,7 @@
 {% block breadcrumb %}
 	{{ block.super }} <!-- para usar o que ele ja tinha --> 
 		<li>/</li>
-		<li><a href="{% url 'edit_password' %}">Editar senha</a></li>
+		<li><a href="{% url 'accounts:edit_password' %}">Editar senha</a></li>
 {% endblock %}
 
 
