--- a/clubinhonerd/clubinhonerd/accounts/templates/accounts/login.html
+++ b/clubinhonerd/clubinhonerd/accounts/templates/accounts/login.html
@@ -23,8 +23,8 @@
                     </div>
                 </fieldset>
                 <p>
-                    Não é cadastrado? <a href="{% url 'register' %}" title="">Cadastre-se</a> <br />
-                    Esqueceu a senha? <a href="{% url 'password_reset' %}" title="">Nova senha</a> <br />
+                    Não é cadastrado? <a href="{% url 'accounts:register' %}" title="">Cadastre-se</a> <br />
+                    Esqueceu a senha? <a href="{% url 'accounts:password_reset' %}" title="">Nova senha</a> <br />
                 </p>
             </form>
         </div>
