--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -13,16 +13,16 @@
     <body>
         <div class="header">
             <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-                <a class="pure-menu-heading" href="{% url 'home' %}">SIMPLE MOOC</a>
+                <a class="pure-menu-heading" href="{% url 'core:home' %}">SIMPLE MOOC</a>
                 <ul>
-                    <li class="pure-menu-selected"><a href="{% url 'home' %}">Início</a></li>
+                    <li class="pure-menu-selected"><a href="{% url 'core:home' %}">Início</a></li>
                     <li><a href="{% url 'index' %}">Cursos</a></li>
-                    <li><a href="{% url 'contact' %}">Contato</a></li>
+                    <li><a href="{% url 'core:contact' %}">Contato</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'dashboard' %}">Painel</a></li>
-                        <li><a href="{% url 'logout' %}">Sair</a></li>
+                        <li><a href="{% url 'accounts:dashboard' %}">Painel</a></li>
+                        <li><a href="{% url 'accounts:logout' %}">Sair</a></li>
                     {% else %}
-                        <li><a href="{% url 'login' %}">Entrar</a></li>
+                        <li><a href="{% url 'accounts:login' %}">Entrar</a></li>
                     {% endif %}
                 </ul>
             </div>
