Testando o envio de email(sucesso e erro)

--- a/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
@@ -2,6 +2,7 @@
 
 <!-- bloco do 'dashboard_content' e não de course_dashboard=herança de herança-->
 {% block dashboard_content %}
+	<h2>Postagens</h2>
 	{% for announcement in announcements %}
 		<div class="well">
 		    <h2>
