--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -16,7 +16,7 @@
                 <a class="pure-menu-heading" href="{% url 'core:home' %}">SIMPLE MOOC</a>
                 <ul>
                     <li class="pure-menu-selected"><a href="{% url 'core:home' %}">Início</a></li>
-                    <li><a href="{% url 'index' %}">Cursos</a></li>
+                    <li><a href="{% url 'courses:index' %}">Cursos</a></li>
                     <li><a href="{% url 'core:contact' %}">Contato</a></li>
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'accounts:dashboard' %}">Painel</a></li>
