--- a/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/announcements.html
@@ -6,11 +6,11 @@
 	{% for announcement in announcements %}
 		<div class="well">
 		    <h2>
-		    	<a href="{% url 'show_announcement' course.slug announcement.pk %}">{{ announcement.title }}</a>
+		    	<a href="{% url 'courses:show_announcement' course.slug announcement.pk %}">{{ announcement.title }}</a>
 		    </h2>
 		    {{ announcement.content|linebreaks }}		    
 		    <p>
-		        <a href="{% url 'show_announcement' course.slug announcement.pk %}#comments">
+		        <a href="{% url 'courses:show_announcement' course.slug announcement.pk %}#comments">
 		        <i class="fa fa-comments-o"></i>
 		        <!-- with = joga um determinada ação dentro de uma variável -->
 		        {% with comments_count=announcement.comments.count %}
