--- a/clubinhonerd/clubinhonerd/courses/templates/courses/lesson.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/lesson.html
@@ -4,15 +4,15 @@
 
 	{{ block.super }} <!-- para usar o que ele ja tinha --> 
 		<li>/</li>
-		<li><a href="{% url 'lessons' course.slug %}">Aulas</a></li>
+		<li><a href="{% url 'courses:lessons' course.slug %}">Aulas</a></li>
 		<li>/</li>
-		<li><a href="{% url 'lesson' course.slug lesson.pk %}">{{ lesson }}</a></li>
+		<li><a href="{% url 'courses:lesson' course.slug lesson.pk %}">{{ lesson }}</a></li>
 {% endblock %}
 
 {% block dashboard_content %}
 
 	<div class="well">
-	    <h2><a href="{% url 'lesson' course.slug lesson.pk %}">{{ lesson }}</a></h2>
+	    <h2><a href="{% url 'courses:lesson' course.slug lesson.pk %}">{{ lesson }}</a></h2>
 	    {{ lesson.description|linebreaks }}
 	    <p>
 	        <h4>Material da Aula</h4>
@@ -36,7 +36,7 @@
 		                    </td>
 		                    <td>
 		                    	{% if material.is_embedded %}
-			                        <a href="{% url 'material' course.slug material.pk %}">
+			                        <a href="{% url 'courses:material' course.slug material.pk %}">
 			                            <i class"fa fa-video-camera"></i>
 			                            Acessar
 			                        </a>
