--- a/clubinhonerd/clubinhonerd/courses/templates/courses/lessons.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/lessons.html
@@ -5,7 +5,7 @@
 
 	{{ block.super }} <!-- para usar o que ele ja tinha --> 
 		<li>/</li>
-		<li><a href="{% url 'lessons' course.slug %}">Aulas</a></li>
+		<li><a href="{% url 'courses:lessons' course.slug %}">Aulas</a></li>
 		
 {% endblock %}
 
@@ -21,7 +21,7 @@
 				<!-- para mostrar só uma parte da descrição, 20=número de palavras -->
 				{{ lesson.description|truncatewords:'20' }}
 				<br />
-				<a href="{% url 'lesson' course.slug lesson.pk %}">
+				<a href="{% url 'courses:lesson' course.slug lesson.pk %}">
 					<i class="fa fa-eye"></i>
 					Acessar Aula
 				</a>
