--- a/clubinhonerd/clubinhonerd/courses/templates/courses/material.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/material.html
@@ -4,21 +4,21 @@
 
 	{{ block.super }} <!-- para usar o que ele ja tinha --> 
 		<li>/</li>
-		<li><a href="{% url 'lessons' course.slug %}">Aulas</a></li>
+		<li><a href="{% url 'courses:lessons' course.slug %}">Aulas</a></li>
 		<li>/</li>
-		<li><a href="{% url 'lesson' course.slug lesson.pk %}">{{ lesson }}</a></li>
+		<li><a href="{% url 'courses:lesson' course.slug lesson.pk %}">{{ lesson }}</a></li>
 		<li>/</li>
-		<li><a href="{% url 'material' course.slug material.pk %}">{{ material }}</a></li>
+		<li><a href="{% url 'courses:material' course.slug material.pk %}">{{ material }}</a></li>
 {% endblock %}
 
 
 {% block dashboard_content %}
 
 	<div class="well">
-		<h2><a href="{% url 'material' course.slug material.pk %}">{{ material }}</a></h2>
+		<h2><a href="{% url 'courses:material' course.slug material.pk %}">{{ material }}</a></h2>
 		{{ material.embedded|safe }}
 		<p>
-			<a href="{% url 'lesson' course.slug lesson.pk %}">Voltar</a>
+			<a href="{% url 'courses:lesson' course.slug lesson.pk %}">Voltar</a>
 		</p>
 	</div>
 
