--- a/clubinhonerd/clubinhonerd/courses/templates/courses/undo_enrollment.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/undo_enrollment.html
@@ -8,7 +8,7 @@
 		<h3>Você deseja realmente cancelar a inscrição desse curso?</h3>
 		<div class="pure-controls">
 			<button type="submit" class="pure-button pure-button-primary">Confirmar</button>
-			<a href="{% url 'announcements' course.slug %}" class="pure-button">Voltar</a>
+			<a href="{% url 'courses:announcements' course.slug %}" class="pure-button">Voltar</a>
 		</div>
 	</form>
 
