--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
-        <title>Simple MOOC</title>
+        <meta name="description" content="Clubinho Nerd - Uma simples plataforma de ensino a distância" />
+        <title>ClubinhoNerd</title>
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
         <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
@@ -13,10 +13,11 @@
     <body>
         <div class="header">
             <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-                <a class="pure-menu-heading" href="{% url 'core:home' %}">SIMPLE MOOC</a>
+                <a class="pure-menu-heading" href="{% url 'core:home' %}">ClubinhoNerd</a>
                 <ul>
                     <li class="pure-menu-selected"><a href="{% url 'core:home' %}">Início</a></li>
                     <li><a href="{% url 'courses:index' %}">Cursos</a></li>
+                    <li><a href="{% url 'forum:index' %}">Fórum</a></li>
                     <li><a href="{% url 'core:contact' %}">Contato</a></li>
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'accounts:dashboard' %}">Painel</a></li>
@@ -40,7 +41,7 @@
             {% endif %}  
             {% block content %}{% endblock %}
             <div class="footer">
-                Simple MOOC - Uma simples plataforma de ensino a distância
+               Clubinho Nerd - Uma simples plataforma de ensino a distância
             </div>
         </div>
         <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
