--- a/clubinhonerd/clubinhonerd/core/templates/contact.html
+++ b/clubinhonerd/clubinhonerd/core/templates/contact.html
@@ -8,8 +8,8 @@
             <p>Você pode entrar em contato conosco tanto por e-mail como pelas redes sociais, abaixo seguem os links para contato:</p>
             <h4>Links</h4>
             <ul>
-                <li>E-mail: <a href="mailto:contato@simplemooc.org">contato@simplemooc.org</a></li>
-                <li>Twitter: <a href="https://twitter.com/simplemooc">@simplemooc</a></li>
+                <!-- <li>E-mail: <a href="mailto:contato@simplemooc.org">contato@simplemooc.org</a></li> -->
+                <!-- <li>Twitter: <a href="https://twitter.com/simplemooc">@simplemooc</a></li> -->
             </ul>
         </div>
     </div>
