--- a/clubinhonerd/clubinhonerd/courses/templates/courses/index.html
+++ b/clubinhonerd/clubinhonerd/courses/templates/courses/index.html
@@ -7,7 +7,7 @@
     <div class="pure-g-r content-ribbon">
         <div class="pure-u-1">
             <div class="l-box">
-                <h4 class="content-subhead"> Listagem de Cursos do SimpleMOOC</h4>
+                <h4 class="content-subhead"> Listagem de Cursos do ClubinhoNerd</h4>
                 <p>Abaixo a lista de cursos disponíveis na plataforma</p>
             </div>
         </div>
