--- a/clubinhonerd/clubinhonerd/forum/templates/forum/index.html
+++ b/clubinhonerd/clubinhonerd/forum/templates/forum/index.html
@@ -17,28 +17,31 @@
 	                    Tópicos do Fórum
 	                </li>
 	                <li>
-	                    <a href="#">
+	                    <a href="{% url 'forum:index' %}?order=">
 	                        <i class="fa fa-refresh"></i>
 	                        Mais Recentes
 	                    </a>
 	                </li>
 	                <li>
-	                    <a href="#">
+	                    <a href="{% url 'forum:index' %}?order=views">
 	                        <i class="fa fa-eye"></i>
 	                        Mais Visualizados
 	                    </a>
 	                </li>
 	                <li>
-	                    <a href="#">
+	                    <a href="{% url 'forum:index' %}?order=answers">
 	                        <i class="fa fa-comments-o"></i>
 	                        Mais Comentados
 	                    </a>
 	                </li>
 	                <li class="pure-menu-heading">Tags</li>
-	                <li>                    
-	                    <a href="#" class="tags">
-	                        <i class="fa fa-tag"></i>      /TODO                
-	                    </a>                    
+	                <li>
+	                	{% for tag in tags %}
+		                	<a href="#" class="tags">
+		                        <i class="fa fa-tag"></i>
+		                        {{ tag }}
+		                    </a>                    
+		                {% endfor %}    
 	                </li>
 	            </ul>
 	        </div>
@@ -48,7 +51,7 @@
 	        	<!-- 'object.list' é fornecido pelo ListView -->
 	        	{% for thread in object_list %}
 
-		            <div class="well">
+		            <div class="well">		            
 		                <h3><a href="#" title="">{{ thread.title }}</a></h3>
 		                <h5>
 		                    Criado por {{ thread.author }} | {{ thread.answers }} resposta{{ thread.answers|pluralize }} | {{ thread.views }}  Visualizaç{{ thread.views|pluralize:"ão,ões" }} 
@@ -58,24 +61,32 @@
 		                    Tags: 
 		                    {% for tag in thread.tags.all %}
 		                    	<!-- Todo for tem uma variável forloop -->
-
 		                    	<a href="" title="">{{ tag }}</a>{% if not forloop.last %},{% endif %}
 		                    {% endfor %}
 		                    <a class="fright" href="" title="">Atualizado à {{ thread.modified|timesince }} atrás</a>
 		                </p>
 		            </div>
 
-	            {% endfor %}            
-	            <ul class="pagination pagination-centered">                
-	                <li>
-	                    <a href="#" title="">Anterior</a>
-	                </li>               
-	                <li class="active">
-	                    <a href="#" title="">Page</a>
-	                </li>                
-	                <li>
-	                    <a href="#" title="">Próxima</a>
-	                </li>              
+	            {% endfor %}
+	            <!-- Objectos fornecidos pelo ListView -->
+	            <!-- paginator = lista de page_obj -->        
+	            <!-- page_obj = página atual -->
+	            <ul class="pagination pagination-centered">
+	            	{% if page_obj.has_previous %}
+	            		<li>
+		                    <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.order %}&order={{ request.GET.order }}{% endif %}" title="">Anterior</a>
+		                </li>
+	            	{% endif %}
+	            	{% for page in paginator.page_range %}          
+		                <li{% if page == page_obj.number %} class="active" {% endif %}>
+		                    <a href="?page={{ page }}{% if request.GET.order %}&order={{ request.GET.order }}{% endif %}" title="">{{ page }}</a>
+		                </li>               
+	                {% endfor %}
+	                {% if page_obj.has_next %}
+	            		<li>
+		                    <a href="?page={{ page_obj.next_page_number }}{% if request.GET.order %}&order={{ request.GET.order }}{% endif %}" title="">Próxima</a>
+		                </li>
+	            	{% endif %}	                          
 	            </ul>
 	        </div>
 	    </div>
