--- a/clubinhonerd/clubinhonerd/forum/templates/forum/index.html
+++ b/clubinhonerd/clubinhonerd/forum/templates/forum/index.html
@@ -7,7 +7,7 @@
 	        <ul class="breadcrumb">
 	            <li><a href="{% url 'core:home' %}">Início</a></li>
 	            <li>/</li>
-	            <li><a href="{% url 'forum:index' %}">Fórum de Discussões</a></li>
+	            <li><a href="{% url 'forum:index' %}">Fórum de Discussões</a></li>	            
 	        </ul>
 	    </div>
 	    <div class="pure-u-1-3">
@@ -52,7 +52,7 @@
 	        	{% for thread in object_list %}
 
 		            <div class="well">		            
-		                <h3><a href="#" title="">{{ thread.title }}</a></h3>
+		                <h3><a href="{{ thread.get_absolute_url }}" title="">{{ thread.title }}</a></h3>
 		                <h5>
 		                    Criado por {{ thread.author }} | {{ thread.answers }} resposta{{ thread.answers|pluralize }} | {{ thread.views }}  Visualizaç{{ thread.views|pluralize:"ão,ões" }} 
 		                </h5>
@@ -63,7 +63,7 @@
 		                    	<!-- Todo for tem uma variável forloop -->
 		                    	<a href="{% url 'forum:index_tagged' tag.slug %}" title="">{{ tag }}</a>{% if not forloop.last %},{% endif %}
 		                    {% endfor %}
-		                    <a class="fright" href="" title="">Atualizado à {{ thread.modified|timesince }} atrás</a>
+		                    <a class="fright" href="{{ thread.get_absolute_url }}" title="">Atualizado à {{ thread.modified|timesince }} atrás</a>
 		                </p>
 		            </div>
 
