Feita a indicação de resposta correta e cancelar resposta

--- a/clubinhonerd/clubinhonerd/forum/templates/forum/thread.html
+++ b/clubinhonerd/clubinhonerd/forum/templates/forum/thread.html
@@ -71,12 +71,25 @@
                         <a class="fright" href="#add_comment">Responder</a>
                     </h4>
                     {% for reply in object.replies.all %}
-                        <hr />
-                        <!-- Semelhante ap ' |linebreaks ' -->
-                        {% filter linebreaks %}                            
+                        <hr />                        
+                        <p>
                             <strong>{{ reply.author }}</strong> disse à {{ reply.created|timesince }} atrás:
-                            {{ reply.reply }}
-                        {% endfilter %}    
+                            <br />
+                            {{ reply.reply|linebreaksbr }}                            
+                            <br />
+                            {% if reply.correct %}                                
+                                <br />
+                                {% if reply.author == user %}
+                                    <a href="{% url 'forum:reply_incorrect' reply.pk %}" class="pure-button button-error">Cancelar resposta correta</a>
+                                {% endif %}
+                                <span class="fright label-success">resposta indicada pelo autor</span>
+                                <br />
+                            {% elif reply.author == user %}
+                                <br />
+                                
+                                <a href="{% url 'forum:reply_correct' reply.pk %}" class="pure-button button-success"> Resposta correta</a>
+                            {% endif %}
+                        </p>
                     {% endfor %}
                     <hr />
                     <form method="post" class="pure-form pure-form-stacked" id="add_comment">
