--- a/clubinhonerd/clubinhonerd/core/templates/base.html
+++ b/clubinhonerd/clubinhonerd/core/templates/base.html
@@ -45,5 +45,7 @@
             </div>
         </div>
         <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        {% block scripts %}{% endblock %}
     </body>
 </html>
